--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@
 @import "./layouts/heroportfolio";
 @import "./layouts/footer";
 
-//STIDIO
+//STUDIO
 @import "./layouts/herostudio";
 @import "./layouts/quality";
 @import "./layouts/occupation";
